--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -19,9 +19,7 @@
   "homepage": "https://github.com/Mid30s/Team-Profile-Generator#readme",
   "dependencies": {
     "chalk": "^2.4.1",
-    "inquirer": "^8.2.4"
-  },
-  "devDependencies": {
-    "jest": "^29.4.3"
+    "inquirer": "^8.2.4",
+    "jest": "^24.8.0"
   }
 }
